--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "flutterwave-react-v3": "^1.0.10",
+    "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.19.0",
@@ -16,6 +17,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
+    "react-toastify": "^7.0.4",
+    "use-deep-compare-effect": "^1.6.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
